--- a/buoi2.css
+++ b/buoi2.css
@@ -364,8 +364,9 @@
 }
 
 .remember-me {
-    font-size: 20px;
+    font-size: 27px;
     display: flex;
+    color: #00000066;
     margin-top: 41px;
     align-items: center;
     margin-bottom: 20px;
@@ -373,6 +374,9 @@
 
 .remember-me input {
     margin-right: 10px;
+}
+.remember-me .check {
+    transform: scale(1.5);
 }
 
 .login-btn {
@@ -422,9 +426,9 @@
     margin-top: 40px;
     width: 1304px;
     height: 794px;
-    border: 2px solid #cce1ff;
+    border: 5px solid #cce1ff;
     border-radius: 10px;
-    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     background-color: white;
     overflow: hidden;
     padding: 20px;
