--- a/buoi2.css
+++ b/buoi2.css
@@ -335,7 +335,7 @@
 
 .eye-icon {
     position: absolute;
-    right: 50px;
+    right: 40px;
     top: 82px;
     transform: translateY(-50%);
     cursor: pointer;
@@ -344,9 +344,10 @@
 
 .form-group input {
     margin-top: 16px;
-    padding-right: 50px;
+    padding-right: 40px;
     width: 516px;
     height: 64px;
+    padding-left: 15px;
     font-size: 26px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -433,6 +434,7 @@
     overflow: hidden;
     padding: 20px;
     display: flex;
+    flex-direction: row;
 }
 
 .card-header {
@@ -510,6 +512,130 @@
     font-size: 32px;
     font-style: italic;
     color: #5e35b1;
+}
+@media (max-width: 1024px) {
+    .card {
+        position: relative;
+        flex-direction: column;
+        width: 100%;
+        height: auto;
+    }
+
+    .profile-img {
+        width: 100%;
+        height: auto;
+    }
+
+    .card-header {
+        padding: 20px;
+    }
+
+    .card-content h2 {
+        margin-top: 20px;
+        margin-left: 20px;
+        font-size: 36px;
+    }
+
+    .card-description {
+        padding: 0 20px;
+        font-size: 28px;
+    }
+
+    .card-icons {
+        margin-top: 30px;
+        margin-left: 20px;
+    }
+
+    .card-quote {
+        margin-left: 20px;
+        font-size: 28px;
+        margin-top: 30px;
+    }
+    .close-button {
+        position: absolute;
+        background: transparent;
+        font-size: 18px;
+        top: 5px;
+        right: 5px;
+    }
+}
+
+@media (max-width: 768px) {
+    .card {
+        padding: 10px;
+    }
+
+    .card-content h2 {
+        margin-top: 10px;
+        margin-left: 10px;
+        font-size: 32px;
+    }
+
+    .card-description {
+        padding: 0 10px;
+        font-size: 24px;
+    }
+
+    .card-icons {
+        margin-top: 20px;
+        margin-left: 10px;
+    }
+
+    .card-quote {
+        margin-left: 10px;
+        font-size: 24px;
+        margin-top: 20px;
+    }
+    .close-button {
+        background: transparent;
+        margin: 20px;
+        position: absolute;
+        font-size: 18px;
+        top: 5px;
+        right: 5px;
+    }
+}
+
+@media (max-width: 480px) {
+    .card {
+        position: relative;
+        padding: 5px;
+    }
+
+    .card-content h2 {
+        margin-top: 5px;
+        margin-left: 5px;
+        font-size: 24px;
+    }
+
+    .card-description {
+        padding: 0 5px;
+        font-size: 18px;
+    }
+
+    .card-icons {
+        margin-top: 10px;
+        margin-left: 5px;
+    }
+
+    .card-quote {
+        margin-left: 5px;
+        font-size: 18px;
+        margin-top: 10px;
+    }
+
+    .card-title {
+        font-size: 20px;
+    }
+
+    .close-button {
+        position: absolute;
+        background: transparent;
+        top: 5px;
+        margin: 20px;
+        right: 5px;
+        font-size: 24px;
+    }
 }
 
 
