--- a/buoi3.css
+++ b/buoi3.css
@@ -308,6 +308,8 @@ main {
 .anh {
     position: absolute;
     display: flex;
-    left: 200px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     z-index: -2;
 }
