--- a/buoi3.css
+++ b/buoi3.css
@@ -78,240 +78,470 @@ body, html {
     right: 55px;
 }
 
-/* bai1 */
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
+    /* bai1 */
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px 20px;
+    }
+
+    .navbar-left {
+        display: flex;
+        align-items: center;
+    }
+
+    .navbar-left h1 {
+        font-size: 20px;
+        margin: 0;
+        font-weight: bold;
+    }
+
+    div ul {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        gap: 76px;
+    }
+
+    div ul li {
+        display: inline;
+    }
+
+    div ul li a {
+        font-size: 24px;
+        text-decoration: none;
+        font-family: Unica One, serif;
+        color: #000;
+        font-weight: bold;
+    }
+
+    .navbar-right {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+    }
+    .icon img{
+        margin-right: 36px;
+    }
+
+    .navbar-right i {
+        font-size: 20px;
+    }
+
+    .cart-icon {
+        position: relative;
+    }
+    .navbar-right {
+        display: flex;
+        align-items: center;
+    }
+
+    .cart-badge {
+        position: absolute;
+        top: -10px;
+        right: -10px;
+        background-color: red;
+        color: white;
+        border-radius: 50%;
+        padding: 5px 8px;
+        font-size: 12px;
+    }
+
+    .happenstance {
+        max-width: 1900px;
+        margin: 0 auto;
+        font-family: "Unica One", serif;
+        position: relative;
+    }
+
+    main {
+        margin: 0 81px 0 63px;
+    }
+
+    .grid-main button {
+        width: 48px;
+        height: 48px;
+        border: 1px solid rgba(19, 18, 18, 0.13);
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 16px;
+        background: #ffffff;
+        cursor: pointer;
+        transition: background 0.3s, border 0.3s;
+    }
+
+    .grid-main button:hover {
+        background: rgba(19, 18, 18, 0.1);
+        border-color: rgba(19, 18, 18, 0.3);
+    }
+
+    .grid-main button:active {
+        background: rgba(19, 18, 18, 0.2);
+    }
+
+    .grid-main {
+        display: grid;
+        grid-template-columns: auto auto auto auto auto;
+        gap: 20px;
+        margin-top: 28px;
+        margin-bottom: 55px;
+    }
+
+    .grid-main button.selected {
+        background: rgba(19, 18, 18, 0.3);
+        border: 2px solid #333;
+        font-weight: bold;
+    }
+
+
+    .size {
+        font-size: 20px;
+    }
+
+    .grid-color button:nth-of-type(1) {
+        border: none;
+        border-radius: 50%;
+        width: 48px;
+        height: 48px;
+        background: #B6A179;
+    }
+
+    .grid-color button:nth-of-type(2) {
+        border: none;
+        border-radius: 50%;
+        width: 48px;
+        height: 48px;
+        background: #272425;
+    }
+
+    .grid-color button:nth-of-type(3) {
+        border: none;
+        border-radius: 50%;
+        width: 48px;
+        height: 48px;
+        background: #6389CB;
+    }
+
+    .grid-color button:nth-of-type(4) {
+        border: none;
+        border-radius: 50%;
+        width: 48px;
+        height: 48px;
+        background: #F2C758;
+    }
+    .flexible {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 99px;
+    }
+
+
+    .grid-color {
+        display: flex;
+        gap: 20px;
+        margin-top: 28px;
+    }
+
+    .grid-color button:hover {
+        font-size: 20px;
+        cursor: pointer;
+        background: #ccc0d7;
+    }
+    .select-color {
+        margin: 100px 0;
+    }
+
+    /*men-sandal*/
+    .men {
+        font-size: 20px;
+        font-family: "Helvetica Neue", serif;
+        margin-bottom: 13px;
+    }
+
+    .label-sandals {
+        font-size: 72px;
+        margin-bottom: 24px;
+    }
+
+    .description-sandals {
+        font-size: 20px;
+        font-family: "Helvetica Neue", serif;
+        opacity: 50%;
+        line-height: 30px;
+    }
+
+    .men-sandals {
+        width: 448px;
+    }
+
+    /**/
+    .scroll {
+        position: absolute;
+        left: 0;
+        top: 856px;
+        rotate: 90deg;
+        font-size: 24px;
+    }
+
+    .social {
+        position: absolute;
+        top: 856px;
+        right: 10px;
+        gap: 30px;
+        rotate: 90deg;
+    }
+
+    .social img {
+        rotate: -90deg;
+    }
+    .social img:not(:nth-of-type(1)) {
+        margin-left:24px;
+    }
+
+    /**/
+    .footer {
+        display: flex;
+        margin: 400px 200px 0 200px;
+        justify-content: space-between;
+    }
+
+    .add-to-cart span {
+        font-size: 24px;
+        font-weight: bold;
+        font-family: "Unica One", serif;
+    }
+
+    .pre-next {
+        display: flex;
+        gap: 50px;
+    }
+    .prev {
+        position: relative;
+    }
+    .prev span {
+        position: absolute;
+        top: 25%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        font-size: 20px;
+    }
+    .prev svg {
+        margin-top: 15px;
+    }
+
+    .next {
+        position: relative;
+    }
+    .next span {
+        position: absolute;
+        top: 25%;
+        right: 50%;
+        transform: translate(50%,-50%);
+        font-size: 20px;
+    }
+    .next svg {
+        position: absolute;
+        top: 70%;
+        right: 50%;
+        transform: translate(50%,-50%);
+    }
+
+    .video {
+        font-size: 20px;
+    }
+
+    .play-video {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+    }
+    .add-to-cart {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .image {
+        position: absolute;
+        display: flex;
+        top: 65%;
+        left: 48%;
+        transform: translate(-50%, -50%);
+        z-index: -2;
+    }
+    .image img {
+        object-fit: cover;
+        width: 1107px;
+    }
+
+/* Responsive */
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    body, html {
+        padding: 0;
+        margin: 0;
+        width: 100%;
+        overflow-x: hidden;
+    }
+    .navbar {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .navbar-left img {
+        width: 300px;
+        height: auto;
+    }
+
+    ul {
+        flex-direction: column;
+        text-align: center;
+        gap: 5px;
+    }
+
+    .navbar-right {
+        flex-direction: row;
+        justify-content: space-around;
+        width: 100%;
+    }
+
+    .happenstance {
+        padding: 15px;
+    }
+
+    main {
+        margin: 400px 0 5px 5px;
+        height: auto;
+    }
+
+    .grid-main {
+        grid-template-columns: 1fr;
+        gap: 5px;
+    }
+
+    /* Footer */
+    .footer {
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        justify-content: space-between;
+        gap: 40px;
+        width: 100%;
+        margin: 0;
+    }
+    .next svg {
+        margin-top: 5px;
+    }
+    .icon img:first-child {
+        margin-top: 15px;
+        margin-right: 20px;
+    }
+    .icon img:last-child {
+        margin: 0;
+    }
+    .icon {
+        display: flex;
+        justify-content: center;
+    }
+
+    .scroll, .social {
+        display: none;
+    }
+
+    .image img {
+        width: 150%;
+        height: auto;
+    }
+
+    .image {
+        top: 45%;
+        left: 35%;
+        transform: translate(-50%, -50%);
+    }
+    .play-video {
+        margin-left: 25px;
+    }
+    .add-to-cart span {
+        font-size: 20px;
+    }
+
+    .video {
+        width: 100%;
+        height: auto;
+        margin: 10px 0;
+    }
+
 }
 
-.navbar-left {
-    display: flex;
-    align-items: center;
-}
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 768px) {
+    body, html {
+        padding: 0;
+        margin: 0;
+        width: 100%;
+        overflow-x: hidden;
+    }
+    .navbar {
+        flex-direction: column;
+        align-items: center;
+    }
+    .grid-main button {
+        font-size: 12px;
+    }
 
-.navbar-left h1 {
-    font-size: 20px;
-    margin: 0;
-    font-weight: bold;
-}
+    .navbar-left img {
+        width: 300px;
+        height: auto;
+    }
 
-.navbar-center ul {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    gap: 76px;
-}
+    ul {
+        flex-direction: row;
+        text-align: center;
+        gap: 5px;
+    }
 
-.navbar-center ul li {
-    display: inline;
-}
+    .navbar-right {
+        margin-top: 30px;
+        flex-direction: row;
+        justify-content: space-around;
+        width: 100%;
+    }
+    .image {
+        top: 75%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    .image img {
+        width: 600px;
+    }
+    .scroll {
+        top: 800px;
+    }
+    .grid-main button{
+        width: 40px;
+        height: 40px;
+    }
+    .grid-main {
+        margin-right: 20px;
+    }
+    .social {
+        display: none;
+    }
+    .footer  {
+        width: 100%;
+        display: flex;
+        margin-top: 350px;
+        margin-left: 10px;
+        justify-content: center;
+        align-items: center;
+        gap: 70px;
+    }
+    .next svg{
+        margin-top: 5px;
+    }
 
-.navbar-center ul li a {
-    font-size: 24px;
-    text-decoration: none;
-    font-family: Unica One, serif;
-    color: #000;
-    font-weight: bold;
-}
-
-.navbar-right {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-}
-
-.navbar-right i {
-    font-size: 20px;
-}
-
-.cart-icon {
-    position: relative;
-}
-.navbar-right {
-    display: flex;
-    align-items: center;
-}
-
-.cart-badge {
-    position: absolute;
-    top: -10px;
-    right: -10px;
-    background-color: red;
-    color: white;
-    border-radius: 50%;
-    padding: 5px 8px;
-    font-size: 12px;
-}
-
-.happenstance {
-    max-width: 1700px;
-    margin: 0 auto;
-    font-family: "Unica One", serif;
-    position: relative;
-}
-
-main {
-    height: 800px;
-}
-
-.grid-item {
-    width: 48px;
-    height: 48px;
-    border: 1px solid rgba(19, 18, 18, 0.13);
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 16px;
-}
-
-.grid-main {
-    display: grid;
-    grid-template-columns: auto auto auto auto auto;
-    gap: 20px;
-    margin-top: 28px;
-    margin-bottom: 55px;
-}
-
-.size {
-    font-size: 20px;
-}
-
-.grid-item-color_1 {
-    width: 48px;
-    height: 48px;
-    background: #B6A179;
-}
-
-.grid-item-color_2 {
-    width: 48px;
-    height: 48px;
-    background: #272425;
-}
-
-.grid-item-color_3 {
-    width: 48px;
-    height: 48px;
-    background: #6389CB;
-}
-
-.grid-item-color_4 {
-    width: 48px;
-    height: 48px;
-    background: #F2C758;
-}
-
-.select {
-    float: left;
-    margin-top: 99px;
-}
-
-.grid-color {
-    display: flex;
-    gap: 20px;
-    margin-top: 28px;
-}
-
-.color {
-    font-size: 20px;
-}
-
-/*men-sandal*/
-.men {
-    font-size: 20px;
-    font-family: "Helvetica Neue", serif;
-    margin-bottom: 13px;
-}
-
-.label-sandals {
-    font-size: 72px;
-    margin-bottom: 24px;
-}
-
-.description-sandals {
-    font-size: 20px;
-    font-family: "Helvetica Neue", serif;
-    opacity: 50%;
-    line-height: 30px;
-}
-
-.men-sandals {
-    float: right;
-    width: 25%;
-    margin-top: 239px;
-}
-
-/**/
-.scroll {
-    position: absolute;
-    left: -50px;
-    top: 726px;
-    rotate: 90deg;
-    font-size: 24px;
-}
-
-.social {
-    position: absolute;
-    top: 708px;
-    right: -50px;
-    gap: 30px;
-    rotate: 90deg;
-}
-
-.social svg {
-    rotate: -90deg;
-}
-.rela {
-    margin-left:24px;
-}
-
-/**/
-.chan {
-    display: flex;
-    justify-content: space-between;
-}
-
-.add-to-cart span {
-    font-size: 24px;
-    font-family: "Unica One", serif;
-}
-
-.pre-next {
-    display: flex;
-    gap: 50px;
-}
-
-.prev span {
-    font-size: 20px;
-}
-
-.next span {
-    font-size: 20px;
-}
-
-.video {
-    font-size: 20px;
-}
-
-.play-video {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-}
-.add-to-cart {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.anh {
-    position: absolute;
-    display: flex;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: -2;
 }
