--- a/four_lesson/index.css
+++ b/four_lesson/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
 * {
     padding: 0;
     margin: 0;
@@ -36,14 +37,14 @@
 
 .item {
     min-height: 50px;
-    background: gold;
-    border: solid 1px red;
+    background: #FFFFFF;
 }
 
 /*item*/
 .item_1, .item_2, .item_3 {
     padding-top: 81px;
 }
+
 .item_1 {
     grid-area: item_1;
     padding-left: 79px;
@@ -71,6 +72,7 @@
     color: #000;
     font-size: 16px;
 }
+
 .item_4 h1 {
     margin: 5.125rem 0 1rem 9.375rem;
 }
@@ -88,6 +90,7 @@
     justify-content: flex-end;
     padding-right: 7rem;
 }
+
 .item_3 img {
     margin-bottom: 10%;
 }
@@ -95,15 +98,19 @@
 /*item 3*/
 .item_4 {
     grid-area: item_4;
+    padding-left: 152px;
 }
+
 .item_4 h1 {
     font-size: 50px;
     color: #8CC5F9;
 }
+
 .item_4 span {
     font-size: 22px;
     line-height: 1.5;
 }
+
 .item_4 p {
     font-size: 22px;
     line-height: 1.5;
@@ -123,6 +130,7 @@
     display: grid;
     place-content: center;
 }
+
 .item_6 span {
     font-size: 35px;
     font-weight: bold;
@@ -134,6 +142,7 @@
     grid-area: item_7;
     padding: 58px 0 81px 0;
 }
+
 .navbar_2 ul {
     padding: 0;
     display: flex;
@@ -159,17 +168,21 @@
 .navbar_2 ul li:nth-child(1) a {
     font-weight: bold;
     color: #8CC5F9;
+    border-bottom: 0.25rem solid #8CC5F9;
 }
+
 /*item 7*/
 .item_8 {
     grid-area: item_8;
     padding: 0 153px 0 153px;
 }
+
 .grid-4 {
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 30px;
 }
+
 .card {
     display: grid;
     place-items: center;
@@ -179,11 +192,13 @@
     width: 261px;
     height: 309px;
 }
+
 .card h3 {
     color: #8CC5F9;
     font-size: 22px;
     font-style: italic;
 }
+
 .card span {
     font-size: 14px;
     font-style: italic;
@@ -194,9 +209,9 @@
 /*item 8*/
 .item_9 {
     grid-area: item_9;
-}
-.item_9 {
     text-align: center;
+    padding-top: 63px;
+    padding-bottom: 182px;
 }
 
 /*item 9*/
@@ -208,6 +223,7 @@
     justify-content: center;
     width: 80%;
     margin: 0 auto;
+    height: 457px;
 }
 
 .item_10 div span:first-child {
@@ -216,11 +232,27 @@
     text-align: center;
 }
 
+.item_10 img {
+    padding-bottom: 43px;
+}
+
+.item_10 div:last-child {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    color: #BDBDBD;
+    font-size: 18px;
+    margin-top: 50px;
+}
+
 /*item 10*/
 .item_11 {
     grid-area: item_11;
     text-align: center;
+    margin-top: 185px;
+    margin-bottom: 121px;
 }
+
 .item_11 span {
     font-size: 35px;
     font-weight: 500;
@@ -231,11 +263,18 @@
     grid-area: item_12;
     display: flex;
     justify-content: flex-end;
+    padding-right: 56px;
+    margin-left: 151px;
+    margin-bottom: 144px;
 }
+
 /*item 12*/
 .item_13 {
     grid-area: item_13;
+    margin-right: 112px;
+    margin-bottom: 144px;
 }
+
 .item_13 span, .item_15 span, .item_17 span, .item_19 span {
     font-size: 55px;
     color: #8CC5F9;
@@ -246,90 +285,142 @@
     line-height: 1.5;
     color: #000;
 }
-
 /*item 13*/
 .item_14 {
     grid-area: item_14;
     display: flex;
     justify-content: flex-end;
+    padding-right: 56px;
+    margin: 0 0 144px 151px;
 }
-
 /*item 14*/
 .item_15 {
     grid-area: item_15;
+    margin: 0 112px 144px 0;
 }
-
 /*item 15*/
 .item_16 {
     grid-area: item_16;
     display: flex;
     justify-content: flex-end;
+    padding-right: 56px;
+    margin-left: 151px;
+    margin-bottom: 144px;
 }
-
 /*item 16*/
 .item_17 {
     grid-area: item_17;
+    margin-right: 112px;
+    margin-bottom: 144px;
 }
-
 /*item 17*/
 .item_18 {
     grid-area: item_18;
     display: flex;
     justify-content: flex-end;
+    padding-right: 56px;
+    margin-left: 151px;
+    margin-bottom: 144px;
 }
-
 /*item 18*/
 .item_19 {
     grid-area: item_19;
+    margin-right: 112px;
 }
-
 /*item 19*/
 .item_20 {
+    position: relative;
     grid-area: item_20;
+    height: 183px;
 }
-
+.item_20 .position {
+    position: absolute;
+    background: #FFFFFF;
+    width: 1140px;
+    height: 223px;
+    display: flex;
+    top: 100%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    justify-content: center;
+    border-radius: 10px;
+    align-items: center;
+    filter: drop-shadow(0 0 7px grey);
+}
+.item_20 .position div:last-child button {
+    width: 250px;
+    height: 60px;
+    margin-right: 70px;
+    border-radius: 10px;
+    background: #8CC5F9;
+    color: #FFFFFF;
+    border: none;
+}
+.item_20 .position div:nth-of-type(2) span {
+    font-size: 35px;
+}
+.item_20 .position div:nth-of-type(2) {
+    padding-right: 140px;
+}
+.item_20 .position div:nth-of-type(1) {
+    margin-right: 44px;
+    margin-left: 46px;
+}
 /*item 20*/
 .item_21 {
     grid-area: item_21;
+    padding-left: 130px;
+    padding-right: 200px;
+    padding-top: 327px;
+    background: #F8F8F8;
 }
-
+.item_21 span {
+    font-size: 18px;
+    color: #BDBDBD;
+    margin-top: 9px;
+}
 /*item 21*/
 .item_22 {
     grid-area: item_22;
+    padding-bottom: 100px;
+    padding-top: 29px;
+    background: #F8F8F8;
 }
-
+.item_22 div:first-child {
+    margin-left: 110px;
+}
+.item_22 div p:last-child {
+    margin-left: 130px;
+    color: #BDBDBD;
+}
 /*item 22*/
 .item_23 {
     grid-area: item_23;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
-    padding: 20px;
+    padding-left: 85px;
+    padding-top: 327px;
+    background: #F8F8F8;
 }
-
 .grid-item h3 {
-    font-size: 20px;
+    font-size: 18px;
     margin-bottom: 10px;
     text-align: left;
 }
-
 .grid-item ul {
     list-style-type: none;
     padding: 0;
 }
-
 .grid-item ul li {
     margin: 15px 0;
 }
-
 .grid-item ul li a {
-    text-decoration: none; /* Bỏ gạch chân */
-    color: #000; /* Đặt màu chữ */
+    text-decoration: none;
+    color: #000;
     font-size: 16px;
 }
-
 .grid-item ul li a:hover {
-    color: #555; /* Đổi màu khi di chuột */
+    color: #555;
 }
-
 /*item 23*/
