--- a/four_lesson/index.css
+++ b/four_lesson/index.css
@@ -13,7 +13,7 @@
 
 .content {
     display: grid;
-    width: 100vw;
+    width: 1600px;
     margin: 0 auto;
     font-family: "Rubik", sans-serif;
     grid-template-columns:  1fr 1fr 1fr 1fr 1fr 1fr;
@@ -221,8 +221,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 80%;
-    margin: 0 auto;
+    padding: 0 211px;
+    background: #FBFBFB;
     height: 457px;
 }
 
@@ -424,3 +424,4 @@
     color: #555;
 }
 /*item 23*/
+/*Responsive*/
